--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "dependencies": {
     "concurrently": "^6.4.0",
-    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "mocha": "^9.1.3",
+    "pug": "^3.0.2",
     "sqlite3": "^5.0.2"
   }
 }
